test/valid-not-implemented/58166_stringLength/stringLength.agu
-- Author: 58166, Manuel Campos

let stringLength (s) : String -> String =
    let text : String =
        if s == "" then "Empty String" else
        if s == "Casa" then "Tiny String" else
        if s == "Manel" then "Big String" else
        "WHOAH... Calm Down";
    text


let main(_) : Unit -> Unit =
    let s1 : String = "Ornitorrinco";
    let s2 : String = "Manel";
    let s3 : String = "Casa";
    print(stringLength(s1));
    print("\n");
    print(stringLength(s2));
    print("\n");
    print(stringLength(s3))
